--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Momentum</title>
 </head>
 <body>
-    <div id="login-form">
-        <input type="text" placeholder="hi"/>
-        <button type="button">로그인</button>
-    </div>
+    <form id="login-form">
+        <input required maxlength="15" type="text" placeholder="hi"/>
+        <button type="submit" value="Login">로그인</button>
+    </form>
     <script src="app.js"></script>
 </body>
 </html>
