--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentum</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <form id="login-form">
+    <form id="login-form" >
         <input required maxlength="15" type="text" placeholder="hi"/>
         <button type="submit" value="Login">로그인</button>
     </form>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
 </body>
 </html>
