--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <form id="login-form" >
+    <form id="login-form" class="hidden">
         <input required maxlength="15" type="text" placeholder="hi"/>
         <button type="submit" value="Login">로그인</button>
     </form>
