--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentum</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
     <form id="login-form" class="hidden">
         <input required maxlength="15" type="text" placeholder="hi"/>
         <button type="submit" value="Login">로그인</button>
     </form>
+    <h2 id="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="app.js"></script>
+    <script src="./js/greetings.js"></script>
+    <script src="./js/clock.js"></script>
 </body>
 </html>
