--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input required maxlength="15" type="text" placeholder="hi"/>
         <button type="submit" value="Login">로그인</button>
     </form>
-    <h2 id="clock">00:00</h2>
+    <h2 id="clock">00 : 00 : 00</h2>
     <h1 id="greeting" class="hidden"></h1>
     <script src="./js/greetings.js"></script>
     <script src="./js/clock.js"></script>
