--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     </form>
     <h2 id="clock">00 : 00 : 00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <div id="quote">
+        <span>명언</span>
+        <span>연사</span>
+    </div>
     <script src="./js/greetings.js"></script>
     <script src="./js/clock.js"></script>
+    <script src="./js/quote.js"></script>
 </body>
 </html>
