--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </form>
     <h2 id="clock">00 : 00 : 00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="오늘의 할일을 적어주세요" required/>
+    </form>
+    <ul id="todo-list"></ul>
+
+
     <div id="quote">
         <span>명언</span>
         <span>연사</span>
@@ -22,5 +28,6 @@
     <script src="./js/clock.js"></script>
     <script src="./js/quote.js"></script>
     <script src="./js/background.js"></script>
+    <script src="./js/todo.js"></script>
 </body>
 </html>
