--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <form id="todo-form">
         <input type="text" placeholder="오늘의 할일을 적어주세요" required/>
     </form>
-    <ul id="todo-list"></ul>
-
-
+    <ul id="todo-list">
+    </ul>
     <div id="quote">
         <span>명언</span>
         <span>연사</span>
