--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input required maxlength="15" type="text" placeholder="hi"/>
         <button type="submit" value="Login">로그인</button>
     </form>
+    
     <h2 id="clock">00 : 00 : 00</h2>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
@@ -23,10 +24,15 @@
         <span>명언</span>
         <span>연사</span>
     </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
     <script src="./js/greetings.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/quote.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/todo.js"></script>
+    <script src="./js/weather.js"></script>
 </body>
 </html>
